--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "@popperjs/core": "2.11.8",
     "axios": "1.7.4",
     "bootstrap": "5.3.3",
+    "client-zip": "^2.4.6",
+    "dl-stream": "^1.0.3",
     "socket.io-client": "4.7.5",
     "sweetalert2": "11.12.4",
     "vue": "^3.4.37",
