--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,16 +2,16 @@
 FROM --platform=linux/amd64 node:20-slim AS client-builder
 
 # Set the working directory in the client builder container
-WORKDIR /client
+WORKDIR /app/client
 
 # Copy the client-side package.json and package-lock.json to the client builder container
-COPY client/package*.json ./
+COPY ./client/package*.json ./
 
 # Install client application dependencies
 RUN npm install
 
 # Copy the client application source code to the client builder container
-COPY client ./
+COPY ./client ./
 
 # Build the client-side code
 RUN npm run build
@@ -20,16 +20,16 @@ RUN npm run build
 FROM node:20-slim
 
 # Set the working directory in the server container
-WORKDIR /server
+WORKDIR /app/server
 
 # Copy the server-side package.json and package-lock.json to the server container
-COPY server/package*.json ./
+COPY ./server/package*.json ./
 
 # Install server application dependencies
 RUN npm install
 
 # Copy the server application source code to the server container
-COPY server ./
+COPY ./server ./
 
 # Copy the built client files from the client builder container to the server's www directory
 COPY --from=client-builder /app/client/docs /app/server/www
@@ -38,4 +38,4 @@ COPY --from=client-builder /app/client/docs /app/server/www
 EXPOSE 3000
 
 # Define the command to start your Node.js application
-CMD [ "node", "index.js" ]
+CMD ["node", "index.js"]
