--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,15 +1,37 @@
-# build.yaml
-name: My First Build 🥚 #name of the Action
+name: Build VUE App 🛠️
 
-on: [push] #trigger of the action
+on:
+  push:
+    branches:
+      - main
 
-jobs: #jobs is a group of tasks for this Action to run
-  hatchling: # name of job
-    runs-on: ubuntu-latest # the system this job runs on
-    steps: #different steps this job needs to complete in order
-      - name: Checkout code 🔍 # name of step
-        uses: actions/checkout@v3 
-        #uses is special, this runs code published somewhere else in github
-        #'checkout' is a pre-built action that pulls your code down into this system
-      - name: Print a Greeting ⌨️
-        run: echo "🐣 Hello from GitHub Actions!"
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    if: contains(github.event.head_commit.message, 'deploy')
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 22
+
+      - name: Change to client directory
+        run: cd client
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build the app
+        run: npm run build
+
+      - name: Push to GitHub
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add docs
+          git commit -m "Build and deploy to docs"
+          git push
