--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,5 +31,6 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add -A
           git commit -m "Build and deploy to docs"
           git push
