--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,11 +2,19 @@ name: Build VUE App 🛠️
 
 on:
   push:
-    branches:
-      - main
+    branches: ['main']
+
+# Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
-  build:
+  pages_deploy:
+    environment:
+        name: github-pages
+        url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     if: contains(github.event.head_commit.message, 'deploy')
 
@@ -27,10 +35,15 @@ jobs:
         working-directory: ./client
         run: npm run build
 
-      - name: Push to GitHub
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add ./client/docs -f
-          git commit -m "Build and deploy to docs"
-          git push
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          # Upload docs folder
+          path: './client/docs'
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
